# duckieGUI

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  package.xml
common/: CMakeLists.txt  main_window.cpp  main_window.hpp  qnode.cpp  qnode.hpp
initGUI/: CMakeLists.txt  main.cpp  talker.cpp  talker.hpp
resources/: images.qrc
ui/: main_window.ui
